--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:/luxigo/elphel-parallel-post-processing
 [submodule "sshall"]
 	path = sshall
-	url = git@github.com:luxigo:/sshall.git
+	url = https://github.com/luxigo/sshall.git
 [submodule "elphel-mov-splitter"]
 	path = elphel-mov-splitter
 	url = https://github.com/f0x06/elphel-mov-splitter.git
